mariadb-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-service
spec:
  selector:
    app: mariadb
  ports:
    - name: mariadb-port
      protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
